Bug #231032 --> if we are passed a mailto url at the command line and there are other arguments after the mailto url, treat them as part of the mailto subject. This happens when web pages use unencoded spaces in mailto urls. Act like Outlook and properly handle this poorly formatted condition.